...
        <Image
          source={require('@/assets/images/partial-react-logo.png')}
          style={styles.reactLogo}
        />
      }>
      <ThemedView style={styles.titleContainer}>
        <ThemedText type="title">Welcome!</ThemedText>
        <HelloWave />
      </ThemedView>

      <ThemedView style={styles.quickActionsContainer} testID="home-quick-actions">
        <ThemedText type="subtitle">Quick Actions</ThemedText>
        <ThemedView style={styles.actionButtons}>
...
